Dark mode styling fixes

--- a/src/theme/SearchBarNew/styles.module.css
+++ b/src/theme/SearchBarNew/styles.module.css
@@ -31,6 +31,11 @@
   align-items: center;
 }
 
+[data-theme='dark'] .searchInputShortcut {
+  background-color: var(--click-color-stroke);
+  border-color: var(--palette_neutral_650);
+}
+
 @media only screen and (max-width: 600px) {
   .searchInputShortcut {
     display: none;
